server/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FIND_DETERMINANT
    PRINT_MATRIX
    TRANSPOSE_MATRIX
    MATRIX
    CTE_B
    ADD_ROWS
    ADD_COLS
    MULTIPLY_COLS
    SWAP_ROWS
    MULTIPLY_ROWS
    MULTIPLY_MATRIX
    SWAP_COLS

Grammar

Rule 0     S' -> start
Rule 1     start -> sem_start_program global_declaration
Rule 2     global_declaration -> var_declaration global_declaration
Rule 3     global_declaration -> func_declaration
Rule 4     var_declaration -> var_type ID sem_add_var SEMICOLON
Rule 5     var_declaration -> var_type ID sem_get_matrix_id matrix_declaration SEMICOLON sem_add_matrix
Rule 6     var_declaration -> empty
Rule 7     matrix_declaration -> LEFT_BRACKET CTE_I sem_get_dim1 RIGHT_BRACKET LEFT_BRACKET CTE_I sem_get_dim2 RIGHT_BRACKET
Rule 8     matrix_declaration -> empty
Rule 9     matrix -> LEFT_BRACKET sem_check_dim1 exp RIGHT_BRACKET sem_ver_dim1 LEFT_BRACKET sem_check_dim2 exp RIGHT_BRACKET sem_ver_dim2
Rule 10    matrix -> empty
Rule 11    func_declaration -> func_signature func_declaration
Rule 12    func_declaration -> main
Rule 13    func_signature -> FUNCTION func_type matrix_declaration func_signature_1 sem_end_func
Rule 14    func_signature_1 -> ID sem_add_func LEFT_PAR param_declaration RIGHT_PAR block
Rule 15    param_declaration -> var_type ID matrix_declaration sem_add_param
Rule 16    param_declaration -> var_type ID matrix_declaration sem_add_param COMMA param_declaration
Rule 17    param_declaration -> empty
Rule 18    var_type -> INT sem_get_type
Rule 19    var_type -> DOUBLE sem_get_type
Rule 20    var_type -> BOOL sem_get_type
Rule 21    var_cte -> CTE_I sem_push_constant_int
Rule 22    var_cte -> CTE_D sem_push_constant_double
Rule 23    var_cte -> cte_b sem_push_constant_bool
Rule 24    var_cte -> ID sem_push_operand matrix
Rule 25    var_cte -> ID sem_check_function LEFT_PAR sem_false_bottom_begin sem_create_era param_call RIGHT_PAR sem_false_bottom_end sem_count_params sem_gosub
Rule 26    cte_b -> TRUE
Rule 27    cte_b -> FALSE
Rule 28    func_type -> INT sem_get_type
Rule 29    func_type -> DOUBLE sem_get_type
Rule 30    func_type -> BOOL sem_get_type
Rule 31    func_type -> VOID sem_get_type
Rule 32    block -> LEFT_BRACE var_declaration statements RIGHT_BRACE
Rule 33    statements -> statement statements
Rule 34    statements -> empty
Rule 35    statement -> assignment
Rule 36    statement -> condition
Rule 37    statement -> return
Rule 38    statement -> function_call
Rule 39    statement -> while_cycle
Rule 40    statement -> read
Rule 41    statement -> write
Rule 42    assignment -> ID sem_push_operand matrix ASSIGN sem_push_operator mega_exp sem_assign_value SEMICOLON
Rule 43    return -> RETURN mega_exp sem_return_function SEMICOLON
Rule 44    mega_exp -> hyper_exp mega_exp_1
Rule 45    mega_exp_1 -> AND sem_push_operator mega_exp sem_top_logical
Rule 46    mega_exp_1 -> OR sem_push_operator mega_exp sem_top_logical
Rule 47    mega_exp_1 -> empty
Rule 48    hyper_exp -> exp hyper_exp_1
Rule 49    hyper_exp_1 -> IS_EQUAL_TO sem_push_operator exp sem_top_relational
Rule 50    hyper_exp_1 -> NOT_EQUAL_TO sem_push_operator exp sem_top_relational
Rule 51    hyper_exp_1 -> GREATER_THAN sem_push_operator exp sem_top_relational
Rule 52    hyper_exp_1 -> LESS_THAN sem_push_operator exp sem_top_relational
Rule 53    hyper_exp_1 -> GREATER_THAN_OR_EQUAL_TO sem_push_operator exp sem_top_relational
Rule 54    hyper_exp_1 -> LESS_THAN_OR_EQUAL_TO sem_push_operator exp sem_top_relational
Rule 55    hyper_exp_1 -> empty
Rule 56    exp -> term sem_top_term
Rule 57    exp -> term sem_top_term PLUS sem_push_operator exp
Rule 58    exp -> term sem_top_term MINUS sem_push_operator exp
Rule 59    term -> factor sem_top_factor
Rule 60    term -> factor sem_top_factor MULTIPLY sem_push_operator term
Rule 61    term -> factor sem_top_factor DIVIDE sem_push_operator term
Rule 62    factor -> LEFT_PAR sem_false_bottom_begin mega_exp RIGHT_PAR sem_false_bottom_end
Rule 63    factor -> var_cte
Rule 64    factor -> PLUS sem_push_operator var_cte
Rule 65    factor -> MINUS sem_push_operator var_cte
Rule 66    condition -> IF LEFT_PAR mega_exp RIGHT_PAR sem_end_condition block condition_1 sem_fill_gotof
Rule 67    condition_1 -> ELSE sem_else_condition block
Rule 68    condition_1 -> empty
Rule 69    function_call -> ID sem_check_function LEFT_PAR sem_create_era param_call RIGHT_PAR sem_count_params SEMICOLON sem_gosub
Rule 70    param_call -> mega_exp sem_check_param
Rule 71    param_call -> mega_exp sem_check_param COMMA param_call
Rule 72    param_call -> empty
Rule 73    while_cycle -> WHILE sem_start_while LEFT_PAR mega_exp RIGHT_PAR sem_end_condition block sem_end_while
Rule 74    read -> READ sem_push_operator LEFT_PAR mega_exp RIGHT_PAR sem_read_write SEMICOLON
Rule 75    write -> WRITE sem_push_operator LEFT_PAR mega_exp RIGHT_PAR sem_read_write SEMICOLON
Rule 76    main -> MAIN sem_fill_goto_main block sem_fill_eras sem_end_main
Rule 77    empty -> <empty>
Rule 78    sem_get_type -> empty
Rule 79    sem_add_func -> empty
Rule 80    sem_end_func -> empty
Rule 81    sem_add_var -> empty
Rule 82    sem_push_operator -> empty
Rule 83    sem_push_operand -> empty
Rule 84    sem_push_constant_int -> empty
Rule 85    sem_push_constant_double -> empty
Rule 86    sem_push_constant_bool -> empty
Rule 87    sem_top_factor -> empty
Rule 88    sem_top_term -> empty
Rule 89    sem_false_bottom_begin -> empty
Rule 90    sem_false_bottom_end -> empty
Rule 91    sem_assign_value -> empty
Rule 92    sem_read_write -> empty
Rule 93    sem_return_function -> empty
Rule 94    sem_top_logical -> <empty>
Rule 95    sem_top_relational -> <empty>
Rule 96    sem_end_condition -> empty
Rule 97    sem_fill_gotof -> empty
Rule 98    sem_else_condition -> empty
Rule 99    sem_start_while -> empty
Rule 100   sem_end_while -> empty
Rule 101   sem_add_param -> empty
Rule 102   sem_check_function -> empty
Rule 103   sem_create_era -> empty
Rule 104   sem_check_param -> empty
Rule 105   sem_count_params -> empty
Rule 106   sem_gosub -> empty
Rule 107   sem_start_program -> empty
Rule 108   sem_fill_goto_main -> empty
Rule 109   sem_end_main -> empty
Rule 110   sem_fill_eras -> empty
Rule 111   sem_get_matrix_id -> empty
Rule 112   sem_get_dim1 -> empty
Rule 113   sem_get_dim2 -> empty
Rule 114   sem_add_matrix -> empty
Rule 115   sem_check_dim1 -> empty
Rule 116   sem_ver_dim1 -> empty
Rule 117   sem_check_dim2 -> empty
Rule 118   sem_ver_dim2 -> empty

Terminals, with rules where they appear

ADD_COLS             : 
ADD_ROWS             : 
AND                  : 45
ASSIGN               : 42
BOOL                 : 20 30
COMMA                : 16 71
CTE_B                : 
CTE_D                : 22
CTE_I                : 7 7 21
DIVIDE               : 61
DOUBLE               : 19 29
ELSE                 : 67
FALSE                : 27
FIND_DETERMINANT     : 
FUNCTION             : 13
GREATER_THAN         : 51
GREATER_THAN_OR_EQUAL_TO : 53
ID                   : 4 5 14 15 16 24 25 42 69
IF                   : 66
INT                  : 18 28
IS_EQUAL_TO          : 49
LEFT_BRACE           : 32
LEFT_BRACKET         : 7 7 9 9
LEFT_PAR             : 14 25 62 66 69 73 74 75
LESS_THAN            : 52
LESS_THAN_OR_EQUAL_TO : 54
MAIN                 : 76
MATRIX               : 
MINUS                : 58 65
MULTIPLY             : 60
MULTIPLY_COLS        : 
MULTIPLY_MATRIX      : 
MULTIPLY_ROWS        : 
NOT_EQUAL_TO         : 50
OR                   : 46
PLUS                 : 57 64
PRINT_MATRIX         : 
READ                 : 74
RETURN               : 43
RIGHT_BRACE          : 32
RIGHT_BRACKET        : 7 7 9 9
RIGHT_PAR            : 14 25 62 66 69 73 74 75
SEMICOLON            : 4 5 42 43 69 74 75
SWAP_COLS            : 
SWAP_ROWS            : 
TRANSPOSE_MATRIX     : 
TRUE                 : 26
VOID                 : 31
WHILE                : 73
WRITE                : 75
error                : 

Nonterminals, with rules where they appear

assignment           : 35
block                : 14 66 67 73 76
condition            : 36
condition_1          : 66
cte_b                : 23
empty                : 6 8 10 17 34 47 55 68 72 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
exp                  : 9 9 48 49 50 51 52 53 54 57 58
factor               : 59 60 61
func_declaration     : 3 11
func_signature       : 11
func_signature_1     : 13
func_type            : 13
function_call        : 38
global_declaration   : 1 2
hyper_exp            : 44
hyper_exp_1          : 48
main                 : 12
matrix               : 24 42
matrix_declaration   : 5 13 15 16
mega_exp             : 42 43 45 46 62 66 70 71 73 74 75
mega_exp_1           : 44
param_call           : 25 69 71
param_declaration    : 14 16
read                 : 40
return               : 37
sem_add_func         : 14
sem_add_matrix       : 5
sem_add_param        : 15 16
sem_add_var          : 4
sem_assign_value     : 42
sem_check_dim1       : 9
sem_check_dim2       : 9
sem_check_function   : 25 69
sem_check_param      : 70 71
sem_count_params     : 25 69
sem_create_era       : 25 69
sem_else_condition   : 67
sem_end_condition    : 66 73
sem_end_func         : 13
sem_end_main         : 76
sem_end_while        : 73
sem_false_bottom_begin : 25 62
sem_false_bottom_end : 25 62
sem_fill_eras        : 76
sem_fill_goto_main   : 76
sem_fill_gotof       : 66
sem_get_dim1         : 7
sem_get_dim2         : 7
sem_get_matrix_id    : 5
sem_get_type         : 18 19 20 28 29 30 31
sem_gosub            : 25 69
sem_push_constant_bool : 23
sem_push_constant_double : 22
sem_push_constant_int : 21
sem_push_operand     : 24 42
sem_push_operator    : 42 45 46 49 50 51 52 53 54 57 58 60 61 64 65 74 75
sem_read_write       : 74 75
sem_return_function  : 43
sem_start_program    : 1
sem_start_while      : 73
sem_top_factor       : 59 60 61
sem_top_logical      : 45 46
sem_top_relational   : 49 50 51 52 53 54
sem_top_term         : 56 57 58
sem_ver_dim1         : 9
sem_ver_dim2         : 9
start                : 0
statement            : 33
statements           : 32 33
term                 : 56 57 58 60 61
var_cte              : 63 64 65
var_declaration      : 2 32
var_type             : 4 5 15 16
while_cycle          : 39
write                : 41

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . sem_start_program global_declaration
    (107) sem_start_program -> . empty
    (77) empty -> .

    INT             reduce using rule 77 (empty -> .)
    DOUBLE          reduce using rule 77 (empty -> .)
    BOOL            reduce using rule 77 (empty -> .)
    FUNCTION        reduce using rule 77 (empty -> .)
    MAIN            reduce using rule 77 (empty -> .)

    sem_start_program              shift and go to state 1
    start                          shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) start -> sem_start_program . global_declaration
    (2) global_declaration -> . var_declaration global_declaration
    (3) global_declaration -> . func_declaration
    (4) var_declaration -> . var_type ID sem_add_var SEMICOLON
    (5) var_declaration -> . var_type ID sem_get_matrix_id matrix_declaration SEMICOLON sem_add_matrix
    (6) var_declaration -> . empty
    (11) func_declaration -> . func_signature func_declaration
    (12) func_declaration -> . main
    (18) var_type -> . INT sem_get_type
    (19) var_type -> . DOUBLE sem_get_type
    (20) var_type -> . BOOL sem_get_type
    (77) empty -> .
    (13) func_signature -> . FUNCTION func_type matrix_declaration func_signature_1 sem_end_func
    (76) main -> . MAIN sem_fill_goto_main block sem_fill_eras sem_end_main

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
    INT             shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOL            shift and go to state 14
    FUNCTION        shift and go to state 4
    MAIN            shift and go to state 15

  ! INT             [ reduce using rule 77 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 77 (empty -> .) ]
  ! BOOL            [ reduce using rule 77 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 77 (empty -> .) ]
  ! MAIN            [ reduce using rule 77 (empty -> .) ]

    var_type                       shift and go to state 5
    func_signature                 shift and go to state 9
    var_declaration                shift and go to state 6
    global_declaration             shift and go to state 10
    main                           shift and go to state 7
    empty                          shift and go to state 8
    func_declaration               shift and go to state 11

state 2

    (0) S' -> start .



state 3

    (107) sem_start_program -> empty .

    INT             reduce using rule 107 (sem_start_program -> empty .)
    DOUBLE          reduce using rule 107 (sem_start_program -> empty .)
    BOOL            reduce using rule 107 (sem_start_program -> empty .)
    FUNCTION        reduce using rule 107 (sem_start_program -> empty .)
    MAIN            reduce using rule 107 (sem_start_program -> empty .)


state 4

    (13) func_signature -> FUNCTION . func_type matrix_declaration func_signature_1 sem_end_func
    (28) func_type -> . INT sem_get_type
    (29) func_type -> . DOUBLE sem_get_type
    (30) func_type -> . BOOL sem_get_type
    (31) func_type -> . VOID sem_get_type

    INT             shift and go to state 20
    DOUBLE          shift and go to state 17
    BOOL            shift and go to state 19
    VOID            shift and go to state 18

    func_type                      shift and go to state 16

state 5

    (4) var_declaration -> var_type . ID sem_add_var SEMICOLON
    (5) var_declaration -> var_type . ID sem_get_matrix_id matrix_declaration SEMICOLON sem_add_matrix

    ID              shift and go to state 21


state 6

    (2) global_declaration -> var_declaration . global_declaration
    (2) global_declaration -> . var_declaration global_declaration
    (3) global_declaration -> . func_declaration
    (4) var_declaration -> . var_type ID sem_add_var SEMICOLON
    (5) var_declaration -> . var_type ID sem_get_matrix_id matrix_declaration SEMICOLON sem_add_matrix
    (6) var_declaration -> . empty
    (11) func_declaration -> . func_signature func_declaration
    (12) func_declaration -> . main
    (18) var_type -> . INT sem_get_type
    (19) var_type -> . DOUBLE sem_get_type
    (20) var_type -> . BOOL sem_get_type
    (77) empty -> .
    (13) func_signature -> . FUNCTION func_type matrix_declaration func_signature_1 sem_end_func
    (76) main -> . MAIN sem_fill_goto_main block sem_fill_eras sem_end_main

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
    INT             shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOL            shift and go to state 14
    FUNCTION        shift and go to state 4
    MAIN            shift and go to state 15

  ! INT             [ reduce using rule 77 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 77 (empty -> .) ]
  ! BOOL            [ reduce using rule 77 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 77 (empty -> .) ]
  ! MAIN            [ reduce using rule 77 (empty -> .) ]

    var_type                       shift and go to state 5
    func_signature                 shift and go to state 9
    var_declaration                shift and go to state 6
    global_declaration             shift and go to state 22
    main                           shift and go to state 7
    empty                          shift and go to state 8
    func_declaration               shift and go to state 11

state 7

    (12) func_declaration -> main .

    $end            reduce using rule 12 (func_declaration -> main .)


state 8

    (6) var_declaration -> empty .

    INT             reduce using rule 6 (var_declaration -> empty .)
    DOUBLE          reduce using rule 6 (var_declaration -> empty .)
    BOOL            reduce using rule 6 (var_declaration -> empty .)
    FUNCTION        reduce using rule 6 (var_declaration -> empty .)
    MAIN            reduce using rule 6 (var_declaration -> empty .)
    ID              reduce using rule 6 (var_declaration -> empty .)
    IF              reduce using rule 6 (var_declaration -> empty .)
    RETURN          reduce using rule 6 (var_declaration -> empty .)
    WHILE           reduce using rule 6 (var_declaration -> empty .)
    READ            reduce using rule 6 (var_declaration -> empty .)
    WRITE           reduce using rule 6 (var_declaration -> empty .)
    RIGHT_BRACE     reduce using rule 6 (var_declaration -> empty .)


state 9

    (11) func_declaration -> func_signature . func_declaration
    (11) func_declaration -> . func_signature func_declaration
    (12) func_declaration -> . main
    (13) func_signature -> . FUNCTION func_type matrix_declaration func_signature_1 sem_end_func
    (76) main -> . MAIN sem_fill_goto_main block sem_fill_eras sem_end_main

    FUNCTION        shift and go to state 4
    MAIN            shift and go to state 15

    func_signature                 shift and go to state 9
    main                           shift and go to state 7
    func_declaration               shift and go to state 23

state 10

    (1) start -> sem_start_program global_declaration .

    $end            reduce using rule 1 (start -> sem_start_program global_declaration .)


state 11

    (3) global_declaration -> func_declaration .

    $end            reduce using rule 3 (global_declaration -> func_declaration .)


state 12

    (18) var_type -> INT . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 24
    empty                          shift and go to state 25

state 13

    (19) var_type -> DOUBLE . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 26
    empty                          shift and go to state 25

state 14

    (20) var_type -> BOOL . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 27
    empty                          shift and go to state 25

state 15

    (76) main -> MAIN . sem_fill_goto_main block sem_fill_eras sem_end_main
    (108) sem_fill_goto_main -> . empty
    (77) empty -> .

    LEFT_BRACE      reduce using rule 77 (empty -> .)

    empty                          shift and go to state 28
    sem_fill_goto_main             shift and go to state 29

state 16

    (13) func_signature -> FUNCTION func_type . matrix_declaration func_signature_1 sem_end_func
    (7) matrix_declaration -> . LEFT_BRACKET CTE_I sem_get_dim1 RIGHT_BRACKET LEFT_BRACKET CTE_I sem_get_dim2 RIGHT_BRACKET
    (8) matrix_declaration -> . empty
    (77) empty -> .

    LEFT_BRACKET    shift and go to state 31
    ID              reduce using rule 77 (empty -> .)

    matrix_declaration             shift and go to state 30
    empty                          shift and go to state 32

state 17

    (29) func_type -> DOUBLE . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    LEFT_BRACKET    reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 33
    empty                          shift and go to state 25

state 18

    (31) func_type -> VOID . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    LEFT_BRACKET    reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 34
    empty                          shift and go to state 25

state 19

    (30) func_type -> BOOL . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    LEFT_BRACKET    reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 35
    empty                          shift and go to state 25

state 20

    (28) func_type -> INT . sem_get_type
    (78) sem_get_type -> . empty
    (77) empty -> .

    LEFT_BRACKET    reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)

    sem_get_type                   shift and go to state 36
    empty                          shift and go to state 25

state 21

    (4) var_declaration -> var_type ID . sem_add_var SEMICOLON
    (5) var_declaration -> var_type ID . sem_get_matrix_id matrix_declaration SEMICOLON sem_add_matrix
    (81) sem_add_var -> . empty
    (111) sem_get_matrix_id -> . empty
    (77) empty -> .

    SEMICOLON       reduce using rule 77 (empty -> .)
    LEFT_BRACKET    reduce using rule 77 (empty -> .)

    sem_get_matrix_id              shift and go to state 39
    sem_add_var                    shift and go to state 37
    empty                          shift and go to state 38

state 22

    (2) global_declaration -> var_declaration global_declaration .

    $end            reduce using rule 2 (global_declaration -> var_declaration global_declaration .)


state 23

    (11) func_declaration -> func_signature func_declaration .

    $end            reduce using rule 11 (func_declaration -> func_signature func_declaration .)


state 24

    (18) var_type -> INT sem_get_type .

    ID              reduce using rule 18 (var_type -> INT sem_get_type .)


state 25

    (78) sem_get_type -> empty .

    LEFT_BRACKET    reduce using rule 78 (sem_get_type -> empty .)
    ID              reduce using rule 78 (sem_get_type -> empty .)


state 26

    (19) var_type -> DOUBLE sem_get_type .

    ID              reduce using rule 19 (var_type -> DOUBLE sem_get_type .)


state 27

    (20) var_type -> BOOL sem_get_type .

    ID              reduce using rule 20 (var_type -> BOOL sem_get_type .)


state 28

    (108) sem_fill_goto_main -> empty .

    LEFT_BRACE      reduce using rule 108 (sem_fill_goto_main -> empty .)


state 29

    (76) main -> MAIN sem_fill_goto_main . block sem_fill_eras sem_end_main
    (32) block -> . LEFT_BRACE var_declaration statements RIGHT_BRACE

    LEFT_BRACE      shift and go to state 40

    block                          shift and go to state 41

state 30

    (13) func_signature -> FUNCTION func_type matrix_declaration . func_signature_1 sem_end_func
    (14) func_signature_1 -> . ID sem_add_func LEFT_PAR param_declaration RIGHT_PAR block

    ID              shift and go to state 43

    func_signature_1               shift and go to state 42

state 31

    (7) matrix_declaration -> LEFT_BRACKET . CTE_I sem_get_dim1 RIGHT_BRACKET LEFT_BRACKET CTE_I sem_get_dim2 RIGHT_BRACKET

    CTE_I           shift and go to state 44


state 32

    (8) matrix_declaration -> empty .

    SEMICOLON       reduce using rule 8 (matrix_declaration -> empty .)
    ID              reduce using rule 8 (matrix_declaration -> empty .)
    COMMA           reduce using rule 8 (matrix_declaration -> empty .)
    RIGHT_PAR       reduce using rule 8 (matrix_declaration -> empty .)


state 33

    (29) func_type -> DOUBLE sem_get_type .

    LEFT_BRACKET    reduce using rule 29 (func_type -> DOUBLE sem_get_type .)
    ID              reduce using rule 29 (func_type -> DOUBLE sem_get_type .)


state 34

    (31) func_type -> VOID sem_get_type .

    LEFT_BRACKET    reduce using rule 31 (func_type -> VOID sem_get_type .)
    ID              reduce using rule 31 (func_type -> VOID sem_get_type .)


state 35

    (30) func_type -> BOOL sem_get_type .

    LEFT_BRACKET    reduce using rule 30 (func_type -> BOOL sem_get_type .)
    ID              reduce using rule 30 (func_type -> BOOL sem_get_type .)


state 36

    (28) func_type -> INT sem_get_type .

    LEFT_BRACKET    reduce using rule 28 (func_type -> INT sem_get_type .)
    ID              reduce using rule 28 (func_type -> INT sem_get_type .)


state 37

    (4) var_declaration -> var_type ID sem_add_var . SEMICOLON

    SEMICOLON       shift and go to state 45


state 38

    (81) sem_add_var -> empty .
    (111) sem_get_matrix_id -> empty .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 81 (sem_add_var -> empty .)
    SEMICOLON       reduce using rule 81 (sem_add_var -> empty .)
    LEFT_BRACKET    reduce using rule 111 (sem_get_matrix_id -> empty .)

  ! SEMICOLON       [ reduce using rule 111 (sem_get_matrix_id -> empty .) ]


state 39

    (5) var_declaration -> var_type ID sem_get_matrix_id . matrix_declaration SEMICOLON sem_add_matrix
    (7) matrix_declaration -> . LEFT_BRACKET CTE_I sem_get_dim1 RIGHT_BRACKET LEFT_BRACKET CTE_I sem_get_dim2 RIGHT_BRACKET
    (8) matrix_declaration -> . empty
    (77) empty -> .

    LEFT_BRACKET    shift and go to state 31
    SEMICOLON       reduce using rule 77 (empty -> .)

    matrix_declaration             shift and go to state 46
    empty                          shift and go to state 32

state 40

    (32) block -> LEFT_BRACE . var_declaration statements RIGHT_BRACE
    (4) var_declaration -> . var_type ID sem_add_var SEMICOLON
    (5) var_declaration -> . var_type ID sem_get_matrix_id matrix_declaration SEMICOLON sem_add_matrix
    (6) var_declaration -> . empty
    (18) var_type -> . INT sem_get_type
    (19) var_type -> . DOUBLE sem_get_type
    (20) var_type -> . BOOL sem_get_type
    (77) empty -> .

    INT             shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOL            shift and go to state 14
    ID              reduce using rule 77 (empty -> .)
    IF              reduce using rule 77 (empty -> .)
    RETURN          reduce using rule 77 (empty -> .)
    WHILE           reduce using rule 77 (empty -> .)
    READ            reduce using rule 77 (empty -> .)
    WRITE           reduce using rule 77 (empty -> .)
    RIGHT_BRACE     reduce using rule 77 (empty -> .)

    var_type                       shift and go to state 5
    var_declaration                shift and go to state 47
    empty                          shift and go to state 8

state 41

    (76) main -> MAIN sem_fill_goto_main block . sem_fill_eras sem_end_main
    (110) sem_fill_eras -> . empty
    (77) empty -> .

    $end            reduce using rule 77 (empty -> .)

    empty                          shift and go to state 49
    sem_fill_eras                  shift and go to state 48

state 42

    (13) func_signature -> FUNCTION func_type matrix_declaration func_signature_1 . sem_end_func
    (80) sem_end_func -> . empty
    (77) empty -> .

    FUNCTION        reduce using rule 77 (empty -> .)
    MAIN            reduce using rule 77 (empty -> .)

    sem_end_func                   shift and go to state 50
    empty                          shift and go to state 51

state 43

    (14) func_signature_1 -> ID . sem_add_func LEFT_PAR param_declaration RIGHT_PAR block
    (79) sem_add_func -> . empty
    (77) empty -> .

    LEFT_PAR        reduce using rule 77 (empty -> .)

    empty                          shift and go to state 53
    sem_add_func                   shift and go to state 52

state 44

    (7) matrix_declaration -> LEFT_BRACKET CTE_I . sem_get_dim1 RIGHT_BRACKET LEFT_BRACKET CTE_I sem_get_dim2 RIGHT_BRACKET
    (112) sem_get_dim1 -> . empty
    (77) empty -> .

    RIGHT_BRACKET   reduce using rule 77 (empty -> .)

    sem_get_dim1                   shift and go to state 54
    empty                          shift and go to state 55

state 45

    (4) var_declaration -> var_type ID sem_add_var SEMICOLON .

    INT             reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    DOUBLE          reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    BOOL            reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    FUNCTION        reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    MAIN            reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    ID              reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    IF              reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    RETURN          reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    WHILE           reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    READ            reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    WRITE           reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)
    RIGHT_BRACE     reduce using rule 4 (var_declaration -> var_type ID sem_add_var SEMICOLON .)


state 46

    (5) var_declaration -> var_type ID sem_get_matrix_id matrix_declaration . SEMICOLON sem_add_matrix

    SEMICOLON       shift and go to state 56


state 47

    (32) block -> LEFT_BRACE var_declaration . statements RIGHT_BRACE
    (33) statements -> . statement statements
    (34) statements -> . empty
    (35) statement -> . assignment
    (36) statement -> . condition
    (37) statement -> . return
    (38) statement -> . function_call
    (39) statement -> . while_cycle
    (40) statement -> . read
    (41) statement -> . write
    (77) empty -> .
    (42) assignment -> . ID sem_push_operand matrix ASSIGN sem_push_operator mega_exp sem_assign_value SEMICOLON
    (66) condition -> . IF LEFT_PAR mega_exp RIGHT_PAR sem_end_condition block condition_1 sem_fill_gotof
    (43) return -> . RETURN mega_exp sem_return_function SEMICOLON
    (69) function_call -> . ID sem_check_function LEFT_PAR sem_create_era param_call RIGHT_PAR sem_count_params SEMICOLON sem_gosub
    (73) while_cycle -> . WHILE sem_start_while LEFT_PAR mega_exp RIGHT_PAR sem_end_condition block sem_end_while
    (74) read -> . READ sem_push_operator LEFT_PAR mega_exp RIGHT_PAR sem_read_write SEMICOLON
    (75) write -> . WRITE sem_push_operator LEFT_PAR mega_exp RIGHT_PAR sem_read_write SEMICOLON

    RIGHT_BRACE     reduce using rule 77 (empty -> .)
    ID              shift and go to state 71
    IF              shift and go to state 72
    RETURN          shift and go to state 60
    WHILE           shift and go to state 59
    READ            shift and go to state 64
    WRITE           shift and go to state 70

    statements                     shift and go to state 57
    function_call                  shift and go to state 58
    write                          shift and go to state 61
    condition                      shift and go to state 62
    statement                      shift and go to state 63
    while_cycle                    shift and go to state 65
    empty                          shift and go to state 66
    return                         shift and go to state 67
    read                           shift and go to state 68
    assignment                     shift and go to state 69

state 48

    (76) main -> MAIN sem_fill_goto_main block sem_fill_eras . sem_end_main
    (109) sem_end_main -> . empty
    (77) empty -> .

    $end            reduce using rule 77 (empty -> .)

    empty                          shift and go to state 74
    sem_end_main                   shift and go to state 73

state 49

    (110) sem_fill_eras -> empty .

    $end            reduce using rule 110 (sem_fill_eras -> empty .)


state 50

    (13) func_signature -> FUNCTION func_type matrix_declaration func_signature_1 sem_end_func .

    FUNCTION        reduce using rule 13 (func_signature -> FUNCTION func_type matrix_declaration func_signature_1 sem_end_func .)
    MAIN            reduce using rule 13 (func_signature -> FUNCTION func_type matrix_declaration func_signature_1 sem_end_func .)


state 51

    (80) sem_end_func -> empty .

    FUNCTION        reduce using rule 80 (sem_end_func -> empty .)
    MAIN            reduce using rule 80 (sem_end_func -> empty .)


state 52

    (14) func_signature_1 -> ID sem_add_func . LEFT_PAR param_declaration RIGHT_PAR block

    LEFT_PAR        shift and go to state 75


state 53

    (79) sem_add_func -> empty .

    LEFT_PAR        reduce using rule 79 (sem_add_func -> empty .)


state 54

    (7) matrix_declaration -> LEFT_BRACKET CTE_I sem_get_dim1 . RIGHT_BRACKET LEFT_BRACKET CTE_I sem_get_dim2 RIGHT_BRACKET

    RIGHT_BRACKET   shift and go to state 76


state 55

    (112) sem_get_dim1 -> empty .

    RIGHT_BRACKET   reduce using rule 112 (sem_get_dim1 -> empty .)


state 56

    (5) var_declaration -> var_type ID sem_get_matrix_id matrix_declaration SEMICOLON . sem_add_matrix
    (114) sem_add_matrix -> . empty
    (77) empty -> .

    INT             reduce using rule 77 (empty -> .)
    DOUBLE          reduce using rule 77 (empty -> .)
    BOOL            reduce using rule 77 (empty -> .)
    FUNCTION        reduce using rule 77 (empty -> .)
    MAIN            reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)
    IF              reduce using rule 77 (empty -> .)
    RETURN          reduce using rule 77 (empty -> .)
    WHILE           reduce using rule 77 (empty -> .)
    READ            reduce using rule 77 (empty -> .)
    WRITE           reduce using rule 77 (empty -> .)
    RIGHT_BRACE     reduce using rule 77 (empty -> .)
